# evm_lab7

./: A.txt  BLAS Operations.txt  BLASMatOperations.cpp  BLASMatOperations.h  CMakeLists.txt  IMatOperations.h  MatGenerator.cpp  MatGenerator.h  MatSize.h  R.txt  R1.txt  SimpleMatOperations.cpp  SimpleMatOperations.h  TEST.txt  VectorizedMatOperations.cpp  VectorizedMatOperations.h  exec  main.cpp
